--- a/task-1.html
+++ b/task-1.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1 - Crimson Network</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
-    <nav class="bg-primary">
+    <nav>
         <h1>JAWABAN TASK - 1 CRIMSON NETWORK</h1>
         <h3>Silahkan masukkan kata :)</h3>
 
@@ -34,24 +35,10 @@
 
             let jawabanakhir = "";
 
-            let temp = "0";
-
             if (kata == "") {
                 jawabanakhir += "Silahkan isi kata yang ingin diinput!";
             }
             else {
-                // for ($i = "0"; $i < strlen(kata); $i++) {
-                //     temp += temp + 1;
-                //     jawabanakhir += String.valueOf(temp);
-                // }
-                // const count = {};
-
-                // array.forEach(element => {
-                //     count[element] = count[element] ? (count[element] + 1) : 1;
-                // });
-
-                // jawabanakhir += count;
-
                 let listtempvalue = [];
                 let count = {};
                 let tmpjwbn = " ";
